# aes-python

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
aes_encryption/: __init__.py  aes.py
aes_encryption/constants/: __init__.py  aes_constants.py  s_box_constants.py
aes_encryption/s_box_mapping/: inverse_s_box_mapping.json  s_box_mapping.json
aes_encryption/tests/: test_block_utils.py  test_round_utils.py  test_sub_bytes.py
aes_encryption/utils/: block_utils.py  key_generator.py  math.py  round_utils.py  s_box_mapping.py
generate_s_box/: inverse_s_box_table.html  parse_s_box_table.py  s_box_table.html
